--- a/style.css
+++ b/style.css
@@ -24,15 +24,18 @@ label {
 input {
   padding: 10px;
   width: 120px;
+  font-size: 1em;
 }
 
 #total-container {
-  width: 180px;
+  width: 240px;
   padding: 20px;
 }
 
 progress[value] {
-  width: 100%;
+  width: 180px;
+  display: inline-block;
+  margin-right: 10px;
 }
 
 .bad {
